feat(font): source sans pro local google web font

--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -12,3 +12,6 @@
 
 // Set the proper directory for the Bootstrap Glyphicon font.
 $icon-font-path: '../bootstrap/assets/fonts/bootstrap/';
+
+//== Typography
+$font-family-sans-serif: 'Source Sans Pro', sans-serif;
