--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,8 @@
+// Google local font
+@import 'fxj/fonts';
+
 // Default variables.
-@import "default-variables";
+@import 'default-variables';
 
 // Bootstrap Framework.
 @import '../bootstrap/assets/stylesheets/bootstrap';
