feat(nav bar header): set layout logo, nav and serch box

--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -15,3 +15,13 @@ $icon-font-path: '../bootstrap/assets/fonts/bootstrap/';
 
 //== Typography
 $font-family-sans-serif: 'Source Sans Pro', sans-serif;
+
+//== Colors
+$brand-primary:     #16a085;    // Greensea
+$brand-secondary:   #2980b9;    // Belizehole
+$brand-tertiary:    #f1c40f;    // Sunflower
+$brand-quaternary:  #c0392b;    // Pomegranate
+
+//== Navbar
+$navbar-default-bg: white;
+$navbar-default-border: #333;
