--- a/scss/_overrides.scss
+++ b/scss/_overrides.scss
@@ -67,5 +67,7 @@ p:last-child,
     margin-top: 0;
   }
 }
+
+@import "fxj/layout";
 @import "fxj/navbar-header";
-@import "fxj/fonts";
+@import "fxj/superfish";
