feat(navbar): main nav dropdown

--- a/scss/_default-variables.scss
+++ b/scss/_default-variables.scss
@@ -24,4 +24,4 @@ $brand-quaternary:  #c0392b;    // Pomegranate
 
 //== Navbar
 $navbar-default-bg: white;
-$navbar-default-border: #333;
+$navbar-default-border: white;
