--- a/css/style.css
+++ b/css/style.css
@@ -431,7 +431,7 @@ th {
   src: url("../bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.eot");
   src: url("../bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.eot?#iefix") format("embedded-opentype"), url("../bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.woff2") format("woff2"), url("../bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.woff") format("woff"), url("../bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.ttf") format("truetype"), url("../bootstrap/assets/fonts/bootstrap/glyphicons-halflings-regular.svg#glyphicons_halflingsregular") format("svg"); }
 /* line 24, ../bootstrap/assets/stylesheets/bootstrap/_glyphicons.scss */
-.glyphicon {
+.glyphicon, .navbar-header #superfish-main-toggle, .navbar-header .menu .menu-sub:not(.sf-no-children):before {
   position: relative;
   top: 1px;
   display: inline-block;
@@ -520,7 +520,7 @@ th {
   content: "\e013"; }
 
 /* line 57, ../bootstrap/assets/stylesheets/bootstrap/_glyphicons.scss */
-.glyphicon-remove:before {
+.glyphicon-remove:before, .navbar-header #superfish-main-toggle.sf-expanded:before {
   content: "\e014"; }
 
 /* line 58, ../bootstrap/assets/stylesheets/bootstrap/_glyphicons.scss */
@@ -1392,7 +1392,7 @@ th {
   content: "\e235"; }
 
 /* line 283, ../bootstrap/assets/stylesheets/bootstrap/_glyphicons.scss */
-.glyphicon-menu-hamburger:before {
+.glyphicon-menu-hamburger:before, .navbar-header #superfish-main-toggle:before {
   content: "\e236"; }
 
 /* line 284, ../bootstrap/assets/stylesheets/bootstrap/_glyphicons.scss */
@@ -1484,7 +1484,7 @@ th {
   content: "\e258"; }
 
 /* line 306, ../bootstrap/assets/stylesheets/bootstrap/_glyphicons.scss */
-.glyphicon-menu-down:before {
+.glyphicon-menu-down:before, .navbar-header .menu .menu-sub:not(.sf-no-children):before {
   content: "\e259"; }
 
 /* line 307, ../bootstrap/assets/stylesheets/bootstrap/_glyphicons.scss */
@@ -5098,7 +5098,7 @@ tbody.collapse.in {
 /* line 397, ../bootstrap/assets/stylesheets/bootstrap/_navbar.scss */
 .navbar-default {
   background-color: white;
-  border-color: #333; }
+  border-color: white; }
   /* line 401, ../bootstrap/assets/stylesheets/bootstrap/_navbar.scss */
   .navbar-default .navbar-brand {
     color: #777; }
@@ -5136,7 +5136,7 @@ tbody.collapse.in {
   /* line 453, ../bootstrap/assets/stylesheets/bootstrap/_navbar.scss */
   .navbar-default .navbar-collapse,
   .navbar-default .navbar-form {
-    border-color: #333; }
+    border-color: white; }
   /* line 462, ../bootstrap/assets/stylesheets/bootstrap/_navbar.scss */
   .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
     background-color: #eeeeee;
@@ -7429,12 +7429,12 @@ html.js .btn .ajax-throbber {
   margin-left: .5em;
   margin-right: -.25em; }
 /* line 26, ../scss/component/_ajax.scss */
-html.js .form-item .input-group-addon .glyphicon {
+html.js .form-item .input-group-addon .glyphicon, html.js .form-item .input-group-addon .navbar-header #superfish-main-toggle, .navbar-header html.js .form-item .input-group-addon #superfish-main-toggle, html.js .form-item .input-group-addon .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu html.js .form-item .input-group-addon .menu-sub:not(.sf-no-children):before {
   color: #777777;
   opacity: .5;
   transition: 150ms color, 150ms opacity; }
   /* line 30, ../scss/component/_ajax.scss */
-  html.js .form-item .input-group-addon .glyphicon.glyphicon-spin {
+  html.js .form-item .input-group-addon .glyphicon.glyphicon-spin, html.js .form-item .input-group-addon .navbar-header .glyphicon-spin#superfish-main-toggle, .navbar-header html.js .form-item .input-group-addon .glyphicon-spin#superfish-main-toggle, html.js .form-item .input-group-addon .navbar-header .menu .glyphicon-spin.menu-sub:not(.sf-no-children):before, .navbar-header .menu html.js .form-item .input-group-addon .glyphicon-spin.menu-sub:not(.sf-no-children):before {
     color: #16a085;
     opacity: 1; }
 /* line 35, ../scss/component/_ajax.scss */
@@ -7652,18 +7652,18 @@ table .checkbox.form-no-label, table .radio.form-no-label {
  * Icon styles.
  */
 /* line 5, ../scss/component/_icon.scss */
-a.icon-before .glyphicon {
+a.icon-before .glyphicon, a.icon-before .navbar-header #superfish-main-toggle, .navbar-header a.icon-before #superfish-main-toggle, a.icon-before .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu a.icon-before .menu-sub:not(.sf-no-children):before {
   margin-right: .25em; }
 /* line 8, ../scss/component/_icon.scss */
-a.icon-after .glyphicon {
+a.icon-after .glyphicon, a.icon-after .navbar-header #superfish-main-toggle, .navbar-header a.icon-after #superfish-main-toggle, a.icon-after .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu a.icon-after .menu-sub:not(.sf-no-children):before {
   margin-left: .25em; }
 
 /* line 14, ../scss/component/_icon.scss */
-.btn.icon-before .glyphicon {
+.btn.icon-before .glyphicon, .btn.icon-before .navbar-header #superfish-main-toggle, .navbar-header .btn.icon-before #superfish-main-toggle, .btn.icon-before .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .btn.icon-before .menu-sub:not(.sf-no-children):before {
   margin-left: -.25em;
   margin-right: .25em; }
 /* line 18, ../scss/component/_icon.scss */
-.btn.icon-after .glyphicon {
+.btn.icon-after .glyphicon, .btn.icon-after .navbar-header #superfish-main-toggle, .navbar-header .btn.icon-after #superfish-main-toggle, .btn.icon-after .navbar-header .menu .menu-sub:not(.sf-no-children):before, .navbar-header .menu .btn.icon-after .menu-sub:not(.sf-no-children):before {
   margin-left: .25em;
   margin-right: -.25em; }
 
@@ -8033,7 +8033,7 @@ p:last-child,
   margin-bottom: 0; }
 
 /* line 50, ../scss/_overrides.scss */
-.region-help > .glyphicon {
+.region-help > .glyphicon, .navbar-header .region-help > #superfish-main-toggle, .navbar-header .menu .region-help > .menu-sub:not(.sf-no-children):before {
   font-size: 18px;
   float: left;
   margin: -0.05em 0.5em 0 0; }
@@ -8053,81 +8053,105 @@ p:last-child,
 
 /* line 2, ../scss/fxj/_layout.scss */
 .container-fluid {
-  max-width: 1160px; }
+  max-width: 1170px; }
 
 /* line 1, ../scss/fxj/_navbar-header.scss */
+.navbar {
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15); }
+
+/* line 4, ../scss/fxj/_navbar-header.scss */
 .navbar-header {
-  width: 100%; }
-  /* line 4, ../scss/fxj/_navbar-header.scss */
+  width: 100%;
+  /* menu */ }
+  /* line 8, ../scss/fxj/_navbar-header.scss */
   .navbar-header .logo {
     display: block;
     height: 50px;
     margin: 8px 15px 8px 60px;
     padding: 0; }
-    /* line 10, ../scss/fxj/_navbar-header.scss */
+    /* line 14, ../scss/fxj/_navbar-header.scss */
     .navbar-header .logo img {
       display: block;
       max-height: 100%; }
-  /* line 16, ../scss/fxj/_navbar-header.scss */
+  /* line 20, ../scss/fxj/_navbar-header.scss */
   .navbar-header .search-block-form {
     top: 10px;
     right: 15px;
     position: absolute;
     width: calc(100% - 250px);
     max-width: 200px; }
-  /* line 24, ../scss/fxj/_navbar-header.scss */
+  /* line 29, ../scss/fxj/_navbar-header.scss */
   .navbar-header #superfish-main-toggle {
     width: 40px;
     height: 40px;
-    float: right;
-    font-size: 40px;
+    color: #333333;
+    cursor: pointer;
+    font-size: 30px;
     left: 15px;
-    line-height: .5;
+    line-height: 1.4;
     padding: 0;
-    position: absolute; }
-    /* line 33, ../scss/fxj/_navbar-header.scss */
-    .navbar-header #superfish-main-toggle:after {
-      right: 0; }
-  /* line 43, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .menu.sf-accordion > li > a {
-    padding-left: 0; }
+    position: absolute;
+    text-align: center;
+    text-decoration: none;
+    top: 10px; }
+    /* line 49, ../scss/fxj/_navbar-header.scss */
+    .navbar-header #superfish-main-toggle:hover, .navbar-header #superfish-main-toggle:focus {
+      background-color: #333333;
+      color: white; }
+  /* line 61, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .menu .menu-enlace {
+    color: #333333;
+    text-decoration: none; }
+    /* line 66, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .menu .menu-enlace:not(.menuparent):hover, .navbar-header .menu .menu-enlace:not(.menuparent):focus {
+      color: #16a085; }
+  /* line 74, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .menu .menu-sub:not(.sf-no-children):before {
+    position: absolute;
+    right: 0;
+    top: 1em; }
+  /* line 84, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .menu .menu-sub:not(.sf-no-children):focus:before {
+    color: #16a085; }
+  /* line 90, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .menu .sf-has-clone-parent {
+    margin-left: 15px; }
 
-/*
- * Nav Accordion & Superfish
- *****************************/
 @media (min-width: 992px) {
-  /* line 56, ../scss/fxj/_navbar-header.scss */
+  /* line 98, ../scss/fxj/_navbar-header.scss */
   .navbar-header .region-navigation {
     position: relative; }
-  /* line 59, ../scss/fxj/_navbar-header.scss */
+  /* line 101, ../scss/fxj/_navbar-header.scss */
   .navbar-header .logo {
     margin-left: 0; }
-  /* line 62, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .block-superfish {
-    float: right;
-    margin-right: 220px;
-    width: auto; }
-    /* line 67, ../scss/fxj/_navbar-header.scss */
-    .navbar-header .block-superfish .menu {
-      margin-bottom: 0; }
-      /* line 70, ../scss/fxj/_navbar-header.scss */
-      .navbar-header .block-superfish .menu > li > a {
-        font-size: 20px;
-        padding: 15px; }
-  /* line 76, ../scss/fxj/_navbar-header.scss */
+  /* line 107, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .block-superfish .menu > li {
+    margin-right: 1px; }
+    /* line 110, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .block-superfish .menu > li > a {
+      border-bottom: 5px solid white;
+      bottom: -1px;
+      font-size: 20px;
+      font-weight: 300;
+      padding: 20px 25px 21px 20px;
+      position: relative; }
+      /* line 118, ../scss/fxj/_navbar-header.scss */
+      .navbar-header .block-superfish .menu > li > a:hover, .navbar-header .block-superfish .menu > li > a:focus {
+        border-color: #f1c40f; }
+    /* line 126, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .block-superfish .menu > li.sfHover > a, .navbar-header .block-superfish .menu > li.active-trail > a {
+      border-color: #f1c40f; }
+    /* line 131, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .block-superfish .menu > li > ul {
+      box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+      background-color: white;
+      top: auto; }
+  /* line 139, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):before {
+    top: 23px; }
+  /* line 144, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):focus:before {
+    color: #333333; }
+  /* line 152, ../scss/fxj/_navbar-header.scss */
   .navbar-header .search-block-form {
     right: 0px; } }
-/* line 1, ../scss/fxj/_superfish.scss */
-div.sf-accordion-toggle.sf-style-default a,
-div.sf-accordion-toggle.sf-style-default a.sf-expanded,
-ul.sf-menu.sf-style-default.sf-accordion li.sf-expanded,
-ul.sf-menu.sf-style-default a,
-ul.sf-menu.sf-style-default a:visited,
-ul.sf-menu.sf-style-default span.nolink,
-ul.sf-menu.sf-style-default li:hover,
-ul.sf-menu.sf-style-default li.sfHover,
-ul.sf-menu.sf-style-default a:focus,
-ul.sf-menu.sf-style-default a:hover,
-ul.sf-menu.sf-style-default span.nolink:hover {
-  background-color: white;
-  color: #333333; }
