feat(navbar): align right

--- a/css/style.css
+++ b/css/style.css
@@ -8124,34 +8124,46 @@ p:last-child,
   /* line 101, ../scss/fxj/_navbar-header.scss */
   .navbar-header .logo {
     margin-left: 0; }
-  /* line 107, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .block-superfish .menu > li {
-    margin-right: 1px; }
-    /* line 110, ../scss/fxj/_navbar-header.scss */
-    .navbar-header .block-superfish .menu > li > a {
-      border-bottom: 5px solid white;
-      bottom: -1px;
-      font-size: 20px;
-      font-weight: 300;
-      padding: 20px 25px 21px 20px;
-      position: relative; }
-      /* line 118, ../scss/fxj/_navbar-header.scss */
-      .navbar-header .block-superfish .menu > li > a:hover, .navbar-header .block-superfish .menu > li > a:focus {
+  /* line 105, ../scss/fxj/_navbar-header.scss */
+  .navbar-header .block-superfish .menu {
+    margin-right: 250px;
+    text-align: right; }
+    /* line 109, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .block-superfish .menu > li {
+      display: inline-block;
+      float: none;
+      margin-right: 1px; }
+      /* line 114, ../scss/fxj/_navbar-header.scss */
+      .navbar-header .block-superfish .menu > li > a {
+        border-bottom: 5px solid white;
+        bottom: -1px;
+        font-size: 20px;
+        font-weight: 300;
+        padding: 20px 25px 21px 20px;
+        position: relative; }
+        /* line 122, ../scss/fxj/_navbar-header.scss */
+        .navbar-header .block-superfish .menu > li > a:hover, .navbar-header .block-superfish .menu > li > a:focus {
+          border-color: #f1c40f; }
+      /* line 130, ../scss/fxj/_navbar-header.scss */
+      .navbar-header .block-superfish .menu > li.sfHover > a, .navbar-header .block-superfish .menu > li.active-trail > a {
         border-color: #f1c40f; }
-    /* line 126, ../scss/fxj/_navbar-header.scss */
-    .navbar-header .block-superfish .menu > li.sfHover > a, .navbar-header .block-superfish .menu > li.active-trail > a {
-      border-color: #f1c40f; }
-    /* line 131, ../scss/fxj/_navbar-header.scss */
-    .navbar-header .block-superfish .menu > li > ul {
-      box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
-      background-color: white;
-      top: auto; }
-  /* line 139, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):before {
-    top: 23px; }
-  /* line 144, ../scss/fxj/_navbar-header.scss */
-  .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):focus:before {
-    color: #333333; }
-  /* line 152, ../scss/fxj/_navbar-header.scss */
+      /* line 135, ../scss/fxj/_navbar-header.scss */
+      .navbar-header .block-superfish .menu > li > ul {
+        box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+        background-color: white;
+        text-align: left;
+        top: auto; }
+        /* line 141, ../scss/fxj/_navbar-header.scss */
+        .navbar-header .block-superfish .menu > li > ul > li > a {
+          font-weight: 300;
+          font-size: 16px;
+          padding: 10px 20px; }
+    /* line 150, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):before {
+      top: 23px; }
+    /* line 155, ../scss/fxj/_navbar-header.scss */
+    .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):hover:before, .navbar-header .block-superfish .menu .menu-sub:not(.sf-no-children):focus:before {
+      color: #333333; }
+  /* line 163, ../scss/fxj/_navbar-header.scss */
   .navbar-header .search-block-form {
     right: 0px; } }
