--- a/scss/fxj/_navbar-header.scss
+++ b/scss/fxj/_navbar-header.scss
@@ -117,10 +117,10 @@
 
           > a {
             border-bottom: 5px solid white;
-            bottom: -1px;
-            font-size: 20px;
+            bottom: -4px;
+            font-size: 18px;
             font-weight: 300;
-            padding: 20px 25px 21px 20px;
+            padding: 20px 25px 20px 20px;
             position: relative;
 
             &:hover,
@@ -166,7 +166,11 @@
     }
     .search-block-form {
       right: 0px;
-      top: 14px;
+      top: 15px;
+
+      .form-item {
+        margin-bottom: 0;
+      }
     }
   }
 }
