--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -1,4 +1,4 @@
-//cookies
+//EU Cookies Compliance
 #sliding-popup {
 
   @extend .alert;
@@ -39,6 +39,34 @@
       }
       .find-more-button {
         display: none;
+      }
+    }
+  }
+}
+
+//Footer
+.footer {
+  &.container-fluid{
+    background-color: $gray-dark;
+    color: white;
+    font-weight: 300;
+    max-width: none;
+    padding: 0;
+    a {
+      color: white;
+      font-size: 300;
+    }
+
+    .region-footer {
+      max-width: $container-large-desktop;
+      margin-right: auto;
+      margin-left: auto;
+      padding: 15px;
+
+      section:last-child {
+        border-top: 1px solid white;
+        margin-top: 15px;
+        padding: 15px 0 0 0;
       }
     }
   }
