--- a/scss/fxj/_footer.scss
+++ b/scss/fxj/_footer.scss
@@ -83,14 +83,21 @@
   &.container-fluid {
     background-color: $brand-quaternary;
   }
-  a {
-    color: white;
-  }
   .menu.footer {
     @extend .nav-pills;
     border: 0;
     margin: 0;
     padding: 0;
+
+    a {
+      background-color: $brand-quaternary;
+      color: white;
+
+      &:hover,
+      &:focus {
+        text-decoration: underline;
+      }
+    }
   }
 }
 
